--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ compile_commands.json
 CTestTestfile.cmake
 _deps
 CMakeUserPresets.json
+CMakeSettings.json
+/out/
+/.vs/
 
 # CLion
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
