changing test files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,7 +101,8 @@ if (BUILD_TESTING)
     enable_testing()
 
     add_executable(chip8-tests
-      tests/main_test.cc
+      tests/cpu_core.cc
+      tests/cpu_opcodes.cc
     )
 
     target_include_directories(chip8-tests PRIVATE "${CMAKE_SOURCE_DIR}/include")
